[package]
name = "pijul-config"
description = "Configuration for the pijul version control system"
version = "0.0.1"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
edition = "2021"
repository = "https://nest.pijul.com/pijul/pijul"
license = "GPL-2.0"
include = [ "Cargo.toml", "src" ]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
dialoguer = { version = "0.10", default-features = false, features = ["editor"] }
dirs-next = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }
whoami = { version = "1.4", default-features = false }
edit = "0.1"
