[package]
name = "pijul-remote"
description = "Functionality to communicate with a pijul repository remotely"
version = "1.0.0-beta.6"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
edition = "2021"
repository = "https://nest.pijul.com/pijul/pijul"
license = "GPL-2.0"
include = ["Cargo.toml", "src"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
byteorder = "1.4"
bytes = "1.4"
dirs-next = "2.0"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
libpijul = { path = "../libpijul", version = "1.0.0-beta.10", features = ["tarball"] }
log = "0.4"
pijul-config = { path = "../pijul-config", version = "0.0.1" }
pijul-identity = { path = "../pijul-identity", version = "0.0.1" }
pijul-interaction = { path = "../pijul-interaction", version = "0.0.1" }
pijul-repository = { path = "../pijul-repository", version = "0.0.1" }
sanakirja = { version = "1.3", default-features = false, features = ["crc32"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream", "json"] }
thrussh = "0.34"
thrussh-keys = "0.22"
thrussh-config = "0.6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
] }
url = "2.4"
keyring = { version = "2.0", default_features = false, features = [
    "linux-no-secret-service",
] }
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
